cmake_minimum_required(VERSION 3.25)
project(Cpp_Study)

set(CMAKE_CXX_STANDARD 20)

add_executable(scratch "/Users/andongni/Library/Application Support/JetBrains/CLion2023.3/scratches/scratch.cpp")


add_executable(Other_BIT APCS_Teach/Other_BIT.cpp)
add_executable(apcs0103 APCS_Sim/apcs0103.cpp)

add_executable(AtCoder AtCoder/AtCoder.cpp)
