cmake_minimum_required(VERSION 3.25)
project(Cpp_Study)
set(CMAKE_CXX_STANDARD 20)

add_executable(scratch "/Users/andongni/Library/Application Support/JetBrains/CLion2023.3/scratches/scratch.cpp")


add_executable(Other_BIT APCS_Teach/Other_BIT.cpp)
add_executable(apcs0103 APCS_Sim/apcs0103.cpp)

add_executable(AtCoder AtCoder/AtCoder.cpp)
add_executable(2019-06_Q4 APCS/2019-06_Q4.cpp)
add_executable(P4 CLHS_OJ/P1_to_P100/P4_Binary_Serach/p4.cpp)

add_executable(2021-01_Q3 APCS/2021-01_Q3.cpp)
add_executable(2016-10-Q4 APCS/2016-10-Q4.cpp)
add_executable(apcs0502 APCS_Sim/apcs0502_P1.cpp)
add_executable(apcs0503 APCS_Sim/apcs0503.cpp)
add_executable(apcs0504 APCS_Sim/apcs0504.cpp)
add_executable(Knapsack1_New APCS_Teach/Knapsack1_New.cpp)
add_executable(2022-01-Q2 APCS/2022-01-Q2.cpp)
add_executable(2019-06-Q2 APCS/2019-06-Q2.cpp)
add_executable(2023-10_Q4_P2 APCS/2023-10_Q4_P2.cpp)
add_executable(2023-10_Q4_P3 APCS/2023-10_Q4_P3.cpp)
add_executable(2021-01-Q2 APCS/2021-01-Q2.cpp)
add_executable(2021-09-Q4 APCS/2021-09-Q4.cpp)
add_executable(2020-10-Q3 APCS/2020-10-Q3.cpp)
add_executable(2020-10-Q3_P1 APCS/2020-10-Q3_P1.cpp)
add_executable(2024-06-Q3 APCS/2024-06-Q3.cpp)
add_executable(2024-06-Q2 APCS/2024-06-Q2.cpp)
add_executable(apcs0601 APCS_Sim/apcs0601.cpp)
add_executable(apcs0604 APCS_Sim/apcs0604.cpp)