cmake_minimum_required(VERSION 3.25)
project(Cpp_Study)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS -Andongni0723/usr/local/include)

add_executable(scratch "/Users/andongni/Library/Application Support/JetBrains/CLion2023.3/scratches/scratch.cpp")


add_executable(Other_BIT APCS_Teach/Other_BIT.cpp)
add_executable(apcs0103 APCS_Sim/apcs0103.cpp)

add_executable(AtCoder AtCoder/AtCoder.cpp)
add_executable(2019-06_Q4 APCS/2019-06_Q4.cpp)
add_executable(P4 CLHS_OJ/P1_to_P100/P4_Binary_Serach/p4.cpp)


add_executable(parser_det_add Other/parser_det_add.cpp)
add_executable(2025-06_Q3 APCS/2025-06_Q3.cpp)
add_executable(2025-06_Q1 APCS/2025-06_Q1.cpp)
add_executable(p2269 LeetCode/p2269.cpp)
add_executable(p497 LeetCode/p497.cpp)
add_executable(p383 LeetCode/p383.cpp)
add_executable(p3142 LeetCode/p3142.cpp)
add_executable(p1292 LeetCode/p1292.cpp)
add_executable(p1337 LeetCode/p1337.cpp)
add_executable(p1854 LeetCode/p1854.cpp)
add_executable(p725 LeetCode/p725.cpp)
add_executable(p2908 LeetCode/p2908.cpp)
add_executable(p2730 LeetCode/p2730.cpp)